# scp

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
bindings/: CMakeLists.txt  auto_gen.py  bindings.cpp  src.cpp  src.hpp
